// Copyright 2026 FinFocus Contributors
// Licensed under the Apache License, Version 2.0

syntax = "proto3";

package finfocus.v1;

option go_package = "github.com/rshade/finfocus-spec/sdk/go/proto/finfocus/v1;pbc";

// =============================================================================
// Usage Profile Enum - Added to enums.proto
// =============================================================================

// UsageProfile represents the intended workload context for cost estimation.
// Plugins use this to apply profile-appropriate defaults to cost calculations
// and recommendations.
//
// Usage:
//   - Core sets usage_profile in requests based on CLI flags (--profile=dev)
//   - Plugins apply profile-specific behavior (e.g., reduced utilization for DEV)
//   - Unknown values are treated as UNSPECIFIED for forward compatibility
//
// Plugin Implementation Guidelines:
//   - MUST treat unknown values as UNSPECIFIED (graceful degradation)
//   - SHOULD log at INFO level when applying profile-specific behavior
//   - SHOULD document profile-specific behavior in plugin documentation
//   - MAY use profile to influence recommendation priorities
enum UsageProfile {
  // Default value - no preference stated.
  // Plugins apply their standard estimation behavior.
  // Backward compatible with requests that don't specify a profile.
  USAGE_PROFILE_UNSPECIFIED = 0;

  // Production workload intent.
  // Plugins should assume:
  //   - Full-time utilization (730 hours/month for compute)
  //   - Production-grade instance types
  //   - High availability and redundancy considerations
  //   - Longer retention periods for storage
  USAGE_PROFILE_PROD = 1;

  // Development workload intent.
  // Plugins should assume:
  //   - Reduced utilization (e.g., 160 hours/month for business hours)
  //   - Burstable/cost-efficient instance types preferred
  //   - Minimal redundancy requirements
  //   - Shorter retention periods acceptable
  USAGE_PROFILE_DEV = 2;

  // Burst/temporary workload intent.
  // Plugins should assume:
  //   - High-intensity, short-duration usage
  //   - Scale-out architectures
  //   - Elevated data transfer/network costs
  //   - Batch processing or load testing scenarios
  USAGE_PROFILE_BURST = 3;
}

// =============================================================================
// GetProjectedCostRequest Extension - Field 6
// =============================================================================
//
// Add to existing message in costsource.proto:
//
//   message GetProjectedCostRequest {
//     ResourceDescriptor resource = 1;
//     double utilization_percentage = 2;
//     GrowthType growth_type = 3;
//     optional double growth_rate = 4;
//     bool dry_run = 5;
//
//     // usage_profile signals the intended workload context.
//     // Plugins use this to apply profile-appropriate defaults.
//     // Examples:
//     //   - DEV: Assume 160 hours/month, prefer burstable instances
//     //   - PROD: Assume 730 hours/month, use production instance types
//     //   - BURST: Assume high data transfer, scale-out patterns
//     //
//     // When UNSPECIFIED (default), plugins apply their standard behavior.
//     // Unknown values are treated as UNSPECIFIED for forward compatibility.
//     UsageProfile usage_profile = 6;
//   }

// =============================================================================
// GetRecommendationsRequest Extension - Field 7
// =============================================================================
//
// Add to existing message in costsource.proto:
//
//   message GetRecommendationsRequest {
//     RecommendationFilter filter = 1;
//     string projection_period = 2;
//     int32 page_size = 3;
//     string page_token = 4;
//     repeated string excluded_recommendation_ids = 5;
//     repeated ResourceDescriptor target_resources = 6;
//
//     // usage_profile provides context for recommendation generation.
//     // Plugins may adjust recommendation priorities based on profile:
//     //   - DEV: Prioritize cost savings over performance
//     //   - PROD: Balance reliability with cost optimization
//     //   - BURST: Focus on scale-out and resource efficiency
//     //
//     // When UNSPECIFIED (default), plugins use their standard prioritization.
//     // Unknown values are treated as UNSPECIFIED for forward compatibility.
//     UsageProfile usage_profile = 7;
//   }
